--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "craco-less": "^2.1.0-alpha.0",
+    "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0-alpha.9",
+    "eslint": "^8.47.0",
     "prettier": "^3.0.2"
   }
 }
