--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.46",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "axios": "^1.4.0",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -28,12 +29,6 @@
     "eject": "react-scripts eject",
     "prettier": "prettier --write ."
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -48,7 +43,8 @@
   },
   "devDependencies": {
     "@craco/craco": "^7.0.0-alpha.9",
-    "eslint": "^8.47.0",
-    "prettier": "^3.0.2"
+    "@types/styled-components": "^5.1.26",
+    "prettier": "^3.0.2",
+    "styled-components": "^6.0.7"
   }
 }
